{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 42,
  "lineage": "ea02fef1-abd3-e0ca-b028-b3cf2812c21f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-049b5af7e37eaf73e",
            "arn": "arn:aws:ec2:eu-central-1:442426867245:elastic-ip/eipalloc-049b5af7e37eaf73e",
            "association_id": "eipassoc-0725adff90b0b582a",
            "domain": "vpc",
            "id": "eipalloc-049b5af7e37eaf73e",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-0917a6059ea6844f2",
            "private_dns": "ip-10-0-1-106.eu-central-1.compute.internal",
            "private_ip": "10.0.1.106",
            "public_dns": "ec2-52-29-127-141.eu-central-1.compute.amazonaws.com",
            "public_ip": "52.29.127.141",
            "public_ipv4_pool": "amazon",
            "tags_all": {
              "ManagedBy": "Terraform",
              "Project": "Monitoring"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "monitoring",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a0bfc6462a1bba50",
            "arn": "arn:aws:ec2:eu-central-1:442426867245:instance/i-011a1b8de266d398a",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2-ssm-profile",
            "id": "i-011a1b8de266d398a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-059a15257fe5bf1af",
            "private_dns": "ip-10-0-102-169.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.102.169",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "ManagedBy": "Terraform",
                  "Project": "Monitoring"
                },
                "tags_all": {
                  "ManagedBy": "Terraform",
                  "Project": "Monitoring"
                },
                "throughput": 0,
                "volume_id": "vol-0bfff099471b2be7d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a9e376164b4ab5b0",
            "tags": {
              "Name": "monitoring"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "monitoring",
              "Project": "Monitoring"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ca0d2879b819848b"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_ssm_profile",
            "aws_iam_role.ec2_ssm_role",
            "aws_instance.psql",
            "aws_security_group.alb_sg",
            "aws_security_group.monitoring_sg",
            "aws_security_group.psql_sg",
            "aws_subnet.private",
            "aws_vpc.this",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "psql",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a0bfc6462a1bba50",
            "arn": "arn:aws:ec2:eu-central-1:442426867245:instance/i-02ea362af008f17ed",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2-ssm-profile",
            "id": "i-02ea362af008f17ed",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f7f0dfb929116a70",
            "private_dns": "ip-10-0-101-201.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.101.201",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "ManagedBy": "Terraform",
                  "Project": "Monitoring"
                },
                "tags_all": {
                  "ManagedBy": "Terraform",
                  "Project": "Monitoring"
                },
                "throughput": 0,
                "volume_id": "vol-05a79d59b7ef60f04",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-046a6948f58d54f7a",
            "tags": {
              "Name": "psql"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "psql",
              "Project": "Monitoring"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05f41fa1f57d709c4"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_ssm_profile",
            "aws_iam_role.ec2_ssm_role",
            "aws_security_group.alb_sg",
            "aws_security_group.monitoring_sg",
            "aws_security_group.psql_sg",
            "aws_subnet.private",
            "aws_vpc.this",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:442426867245:internet-gateway/igw-07ce7a9d1c10a1ad8",
            "id": "igw-07ce7a9d1c10a1ad8",
            "owner_id": "442426867245",
            "tags": {
              "Name": "monitoring-igw"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "monitoring-igw",
              "Project": "Monitoring"
            },
            "vpc_id": "vpc-023af6514ba0f04c7"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:442426867245:loadbalancer/app/monitoring-alb/0882b8d77a3ca983",
            "arn_suffix": "app/monitoring-alb/0882b8d77a3ca983",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "monitoring-alb-2134416934.eu-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:442426867245:loadbalancer/app/monitoring-alb/0882b8d77a3ca983",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "monitoring-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-033d0f122f5a58b59"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00bde2e97a2a92c98"
              },
              {
                "subnet_id": "subnet-07cd924c7ab474be6"
              }
            ],
            "subnets": [
              "subnet-00bde2e97a2a92c98",
              "subnet-07cd924c7ab474be6"
            ],
            "tags": {
              "Name": "monitoring-alb"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "monitoring-alb",
              "Project": "Monitoring"
            },
            "vpc_id": "vpc-023af6514ba0f04c7",
            "xff_header_processing_mode": "append",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:442426867245:listener/app/monitoring-alb/0882b8d77a3ca983/b13dae0ea952beda",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:442426867245:targetgroup/tg-prometheus/88ae0786d24788c8",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:442426867245:listener/app/monitoring-alb/0882b8d77a3ca983/b13dae0ea952beda",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:442426867245:loadbalancer/app/monitoring-alb/0882b8d77a3ca983",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {
              "ManagedBy": "Terraform",
              "Project": "Monitoring"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.public",
            "aws_lb_target_group.prometheus",
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "grafana_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:442426867245:targetgroup/tg-grafana/a950e04e1d1cbc3e",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:442426867245:listener-rule/app/monitoring-alb/0882b8d77a3ca983/b13dae0ea952beda/c27f8c70f8db23ae",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/grafana/*",
                      "/login"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:442426867245:listener-rule/app/monitoring-alb/0882b8d77a3ca983/b13dae0ea952beda/c27f8c70f8db23ae",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-central-1:442426867245:listener/app/monitoring-alb/0882b8d77a3ca983/b13dae0ea952beda",
            "priority": 10,
            "tags": null,
            "tags_all": {
              "ManagedBy": "Terraform",
              "Project": "Monitoring"
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.public",
            "aws_lb_listener.http",
            "aws_lb_target_group.grafana",
            "aws_lb_target_group.prometheus",
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "grafana",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:442426867245:targetgroup/tg-grafana/a950e04e1d1cbc3e",
            "arn_suffix": "targetgroup/tg-grafana/a950e04e1d1cbc3e",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-399",
                "path": "/login",
                "port": "3000",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:442426867245:targetgroup/tg-grafana/a950e04e1d1cbc3e",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tg-grafana",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "ManagedBy": "Terraform",
              "Project": "Monitoring"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-023af6514ba0f04c7"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "prometheus",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:442426867245:targetgroup/tg-prometheus/88ae0786d24788c8",
            "arn_suffix": "targetgroup/tg-prometheus/88ae0786d24788c8",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/-/ready",
                "port": "9090",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:442426867245:targetgroup/tg-prometheus/88ae0786d24788c8",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tg-prometheus",
            "port": 9090,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "ManagedBy": "Terraform",
              "Project": "Monitoring"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-023af6514ba0f04c7"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "grafana_attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:442426867245:targetgroup/tg-grafana/a950e04e1d1cbc3e-20250426134832524500000006",
            "port": 3000,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:442426867245:targetgroup/tg-grafana/a950e04e1d1cbc3e",
            "target_id": "i-011a1b8de266d398a"
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_ssm_profile",
            "aws_iam_role.ec2_ssm_role",
            "aws_instance.monitoring",
            "aws_instance.psql",
            "aws_lb_target_group.grafana",
            "aws_security_group.alb_sg",
            "aws_security_group.monitoring_sg",
            "aws_security_group.psql_sg",
            "aws_subnet.private",
            "aws_vpc.this",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "prometheus_attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:442426867245:targetgroup/tg-prometheus/88ae0786d24788c8-20250426134832658600000007",
            "port": 9090,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:442426867245:targetgroup/tg-prometheus/88ae0786d24788c8",
            "target_id": "i-011a1b8de266d398a"
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_ssm_profile",
            "aws_iam_role.ec2_ssm_role",
            "aws_instance.monitoring",
            "aws_instance.psql",
            "aws_lb_target_group.prometheus",
            "aws_security_group.alb_sg",
            "aws_security_group.monitoring_sg",
            "aws_security_group.psql_sg",
            "aws_subnet.private",
            "aws_vpc.this",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-049b5af7e37eaf73e",
            "association_id": "eipassoc-0725adff90b0b582a",
            "connectivity_type": "public",
            "id": "nat-038e8dac8ca485350",
            "network_interface_id": "eni-0917a6059ea6844f2",
            "private_ip": "10.0.1.106",
            "public_ip": "52.29.127.141",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-07cd924c7ab474be6",
            "tags": {
              "Name": "nat-gw"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "nat-gw",
              "Project": "Monitoring"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:442426867245:route-table/rtb-09bea4cdaadfb61ba",
            "id": "rtb-09bea4cdaadfb61ba",
            "owner_id": "442426867245",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-038e8dac8ca485350",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {
              "ManagedBy": "Terraform",
              "Project": "Monitoring"
            },
            "timeouts": null,
            "vpc_id": "vpc-023af6514ba0f04c7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.this",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:442426867245:route-table/rtb-04c5c0870f94f1107",
            "id": "rtb-04c5c0870f94f1107",
            "owner_id": "442426867245",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07ce7a9d1c10a1ad8",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {
              "ManagedBy": "Terraform",
              "Project": "Monitoring"
            },
            "timeouts": null,
            "vpc_id": "vpc-023af6514ba0f04c7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0297f76da860011aa",
            "route_table_id": "rtb-09bea4cdaadfb61ba",
            "subnet_id": "subnet-046a6948f58d54f7a"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.this",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ced117196c533887",
            "route_table_id": "rtb-09bea4cdaadfb61ba",
            "subnet_id": "subnet-0a9e376164b4ab5b0"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.this",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a5b15929d111a029",
            "route_table_id": "rtb-04c5c0870f94f1107",
            "subnet_id": "subnet-07cd924c7ab474be6"
          },
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0990ab5855440b174",
            "route_table_id": "rtb-04c5c0870f94f1107",
            "subnet_id": "subnet-00bde2e97a2a92c98"
          },
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:442426867245:security-group/sg-033d0f122f5a58b59",
            "description": "ALB public SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-033d0f122f5a58b59",
            "ingress": [
              {
                "cidr_blocks": [
                  "203.0.113.42/32"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-sg-20250426134758121000000001",
            "name_prefix": "alb-sg-",
            "owner_id": "442426867245",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "ManagedBy": "Terraform",
              "Project": "Monitoring"
            },
            "timeouts": null,
            "vpc_id": "vpc-023af6514ba0f04c7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "monitoring_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:442426867245:security-group/sg-0ca0d2879b819848b",
            "description": "Security group for Prometheus \u0026 Grafana",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-0ca0d2879b819848b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-033d0f122f5a58b59"
                ],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 9090,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-033d0f122f5a58b59"
                ],
                "self": false,
                "to_port": 9090
              }
            ],
            "name": "monitoring-sg-20250426134800992900000002",
            "name_prefix": "monitoring-sg-",
            "owner_id": "442426867245",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "ManagedBy": "Terraform",
              "Project": "Monitoring"
            },
            "timeouts": null,
            "vpc_id": "vpc-023af6514ba0f04c7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "psql_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:442426867245:security-group/sg-05f41fa1f57d709c4",
            "description": "Security group for psql node exporter",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-05f41fa1f57d709c4",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 9100,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ca0d2879b819848b"
                ],
                "self": false,
                "to_port": 9100
              }
            ],
            "name": "psql-sg-20250426134803743900000003",
            "name_prefix": "psql-sg-",
            "owner_id": "442426867245",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "ManagedBy": "Terraform",
              "Project": "Monitoring"
            },
            "timeouts": null,
            "vpc_id": "vpc-023af6514ba0f04c7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.monitoring_sg",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:442426867245:subnet/subnet-046a6948f58d54f7a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-046a6948f58d54f7a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "442426867245",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-0"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "private-0",
              "Project": "Monitoring"
            },
            "vpc_id": "vpc-023af6514ba0f04c7"
          },
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:442426867245:subnet/subnet-0a9e376164b4ab5b0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a9e376164b4ab5b0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "442426867245",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-1"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "private-1",
              "Project": "Monitoring"
            },
            "vpc_id": "vpc-023af6514ba0f04c7"
          },
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:442426867245:subnet/subnet-07cd924c7ab474be6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07cd924c7ab474be6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "442426867245",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-0"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "public-0",
              "Project": "Monitoring"
            },
            "vpc_id": "vpc-023af6514ba0f04c7"
          },
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:442426867245:subnet/subnet-00bde2e97a2a92c98",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00bde2e97a2a92c98",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "442426867245",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-1"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "public-1",
              "Project": "Monitoring"
            },
            "vpc_id": "vpc-023af6514ba0f04c7"
          },
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:442426867245:vpc/vpc-023af6514ba0f04c7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b3df4af198bd9cea",
            "default_route_table_id": "rtb-02bf32d3f06ee0720",
            "default_security_group_id": "sg-0c83aabbdc139f667",
            "dhcp_options_id": "dopt-0821414a369150f44",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-023af6514ba0f04c7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02bf32d3f06ee0720",
            "owner_id": "442426867245",
            "tags": {
              "Name": "monitoring-vpc"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "monitoring-vpc",
              "Project": "Monitoring"
            }
          }
        }
      ]
    }
  ]
}